--- a/Notebooks/Web/Web.ipynb
+++ b/Notebooks/Web/Web.ipynb
@@ -12,7 +12,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "b38ab39fda86471fb9e9fc4cc5e99618": {
+        "f87c2e0fabc042cda6b55c22da18c4ad": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DropdownModel",
           "state": {
@@ -254,7 +254,7 @@
               "Anónimo"
             ],
             "_view_name": "DropdownView",
-            "style": "IPY_MODEL_24d6812c9aff47fc82e742fda92bac38",
+            "style": "IPY_MODEL_7a87820ee82d4e16811aa3521efb5cc7",
             "_dom_classes": [],
             "description": "Autor:",
             "_model_name": "DropdownModel",
@@ -266,10 +266,10 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_777af3122e914dfd901be9b22b882a9d"
+            "layout": "IPY_MODEL_b7f0bd9b530749e69aeb830541d0c770"
           }
         },
-        "24d6812c9aff47fc82e742fda92bac38": {
+        "7a87820ee82d4e16811aa3521efb5cc7": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -283,7 +283,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "777af3122e914dfd901be9b22b882a9d": {
+        "b7f0bd9b530749e69aeb830541d0c770": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -334,7 +334,7 @@
             "left": null
           }
         },
-        "e0d88bf11f1347daa2acefac7efc62e5": {
+        "a4ef34ab9700438591cbd5a0ce9b601d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DropdownModel",
           "state": {
@@ -353,7 +353,7 @@
               "Rosario"
             ],
             "_view_name": "DropdownView",
-            "style": "IPY_MODEL_24c3c959e3924f56a88d44203f3b2707",
+            "style": "IPY_MODEL_56c1f2e4474b48bfb44b99ffa21ce2af",
             "_dom_classes": [],
             "description": "Tipo de Obra:",
             "_model_name": "DropdownModel",
@@ -365,10 +365,10 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_4ed5da25752a44d7a814e882b6dd86a8"
+            "layout": "IPY_MODEL_f646a4e98bc445d9a62a98b0233c6790"
           }
         },
-        "24c3c959e3924f56a88d44203f3b2707": {
+        "56c1f2e4474b48bfb44b99ffa21ce2af": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -382,7 +382,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "4ed5da25752a44d7a814e882b6dd86a8": {
+        "f646a4e98bc445d9a62a98b0233c6790": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -433,12 +433,12 @@
             "left": null
           }
         },
-        "3b9b02f8b70549ec9960a5409e1a7683": {
+        "9a2c0baa6a484e7daca3d77363cae2fb": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "state": {
             "_view_name": "ButtonView",
-            "style": "IPY_MODEL_28ce35a958224fefa992169f917bf93e",
+            "style": "IPY_MODEL_2ceca46be1054fb681a9ceeb8ef1a6c0",
             "_dom_classes": [],
             "description": "Buscar",
             "_model_name": "ButtonModel",
@@ -449,12 +449,12 @@
             "_view_count": null,
             "disabled": false,
             "_view_module_version": "1.5.0",
-            "layout": "IPY_MODEL_1815ed3a5d9047c68684c23c12ccce13",
+            "layout": "IPY_MODEL_585acc0ac9444dd69c6b306d37762c94",
             "_model_module": "@jupyter-widgets/controls",
             "icon": ""
           }
         },
-        "28ce35a958224fefa992169f917bf93e": {
+        "2ceca46be1054fb681a9ceeb8ef1a6c0": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "state": {
@@ -469,7 +469,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "1815ed3a5d9047c68684c23c12ccce13": {
+        "585acc0ac9444dd69c6b306d37762c94": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -520,12 +520,12 @@
             "left": null
           }
         },
-        "1a3ab29b2fe24310a39c3809339a4303": {
+        "dce3bf288a6a4b2db5aa5d138c5ac241": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "TextModel",
           "state": {
             "_view_name": "TextView",
-            "style": "IPY_MODEL_909804524277477289aeab1593fa4ffd",
+            "style": "IPY_MODEL_5799d977aa9a472e86c907568dad0c06",
             "_dom_classes": [],
             "description": "",
             "_model_name": "TextModel",
@@ -539,10 +539,10 @@
             "continuous_update": true,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_4020c916fdf84c51830d6786538274ac"
+            "layout": "IPY_MODEL_60b00d9675fb45d799c676e83888abb8"
           }
         },
-        "909804524277477289aeab1593fa4ffd": {
+        "5799d977aa9a472e86c907568dad0c06": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -556,7 +556,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "4020c916fdf84c51830d6786538274ac": {
+        "60b00d9675fb45d799c676e83888abb8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -607,12 +607,12 @@
             "left": null
           }
         },
-        "4a5b1ad3212f4520af97385c1d6fa471": {
+        "079aadf29c224ba1a938a7aa7dd2cd5d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "state": {
             "_view_name": "ButtonView",
-            "style": "IPY_MODEL_2d3bb8f758fc402c87f784bbde3363ea",
+            "style": "IPY_MODEL_6c3a5b979d034976bb382c7c59e4613a",
             "_dom_classes": [],
             "description": "Buscar",
             "_model_name": "ButtonModel",
@@ -623,12 +623,12 @@
             "_view_count": null,
             "disabled": false,
             "_view_module_version": "1.5.0",
-            "layout": "IPY_MODEL_117f83bc84134bf296746f984ce0e755",
+            "layout": "IPY_MODEL_77af72624ab84892add7ab7108c072bb",
             "_model_module": "@jupyter-widgets/controls",
             "icon": ""
           }
         },
-        "2d3bb8f758fc402c87f784bbde3363ea": {
+        "6c3a5b979d034976bb382c7c59e4613a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "state": {
@@ -643,7 +643,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "117f83bc84134bf296746f984ce0e755": {
+        "77af72624ab84892add7ab7108c072bb": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -694,7 +694,7 @@
             "left": null
           }
         },
-        "2cf3d12d5f874a20899f20f989deafe2": {
+        "e998df6f7aaf4293918789087f9cb442": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "state": {
@@ -707,11 +707,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_2bdd2226a0fa4864a8a420fb229fa847",
+            "layout": "IPY_MODEL_e0c031baa49541818483bed42197af46",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "2bdd2226a0fa4864a8a420fb229fa847": {
+        "e0c031baa49541818483bed42197af46": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -762,7 +762,7 @@
             "left": null
           }
         },
-        "15011f0108c44fa7999a026b6036005e": {
+        "1d61a86d7cc24550884ad52929e40819": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "state": {
@@ -775,11 +775,11 @@
             "_model_module_version": "1.0.0",
             "_view_count": null,
             "_view_module_version": "1.0.0",
-            "layout": "IPY_MODEL_8357f36a0b474f88b361a58663c63f8a",
+            "layout": "IPY_MODEL_53f58c9f8a0c4a8ea3dab0f53f6fe5f8",
             "_model_module": "@jupyter-widgets/output"
           }
         },
-        "8357f36a0b474f88b361a58663c63f8a": {
+        "53f58c9f8a0c4a8ea3dab0f53f6fe5f8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -872,23 +872,14 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jTQxMpNu39mJ"
-      },
-      "source": [
-        "# Aplicación Web Proyecto\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
+        "id": "BRAE_TXr4GkL",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 375
         },
-        "id": "BRAE_TXr4GkL",
-        "outputId": "d1e154cb-3060-47d3-b7e1-ae7e6faf1930"
+        "outputId": "9c6e893e-e972-449a-ea7d-11c29ee37b59"
       },
       "source": [
         "img = cv2.imread('banner.jpg')\n",
@@ -900,7 +891,7 @@
         "ax.imshow(img)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -923,7 +914,7 @@
         "id": "_RA5wEtx4F-p"
       },
       "source": [
-        "Vamos a presentar una sencilla página web que nos realice búsquedas de texto y que, dado un autor, nos devuelva todas sus obras clasificadas. Para ello contamos con dos buscadores diferentes, en el primero de ellos podemos seleccionar un autor para que nos muestre todas sus obras y en el segundo podemos escribir texto para que nos muestre todas las apariciones del mismo dentro de las páginas del libro."
+        "# Aplicación Web para realizar búsquedas de las obras y las frases que aparecen en el libro"
       ]
     },
     {
@@ -947,8 +938,8 @@
         "    if num_obra in ini_Obras[cla]: return cla\n",
         "\n",
         "\n",
-        "def beep2(audio_path):\n",
-        "    display(Audio(audio_path, autoplay=False))\n",
+        "def beep(audio_path):\n",
+        "  display(Audio(audio_path, autoplay=False))\n",
         "\n",
         "def buscar_texto(frase,texto): # Las fotos están en una carpeta. El texto es nuestro diccionario con la información.\n",
         "  frase2 = frase.upper()\n",
@@ -1080,7 +1071,7 @@
         "    elif autor in Autores22:\n",
         "      autor = Autores[Autores22.index(autor)]\n",
         "    Foto = np.zeros((100,1000,3),dtype='uint8') + 255\n",
-        "    cv2.putText(Foto, 'Obras del autor ' + remove_punctuation(autor), (100, 60), cv2.FONT_HERSHEY_TRIPLEX,0.8, (0, 0, 0), 2)\n",
+        "    cv2.putText(Foto, 'Obras del autor/a ' + remove_punctuation(autor), (100, 60), cv2.FONT_HERSHEY_TRIPLEX,0.8, (0, 0, 0), 2)\n",
         "    fig, ax = plt.subplots(1,1,figsize=(16,16))\n",
         "    ax.axis('off')\n",
         "    ax.xaxis.set_ticklabels([])\n",
@@ -1116,7 +1107,7 @@
         "    elif autor in Autores22:\n",
         "      autor = Autores[Autores22.index(autor)]\n",
         "    Foto = np.zeros((100,1000,3),dtype='uint8') + 255\n",
-        "    cv2.putText(Foto, 'Obras del autor ' + remove_punctuation(autor) + ' con tipo ' + remove_punctuation(TO), (100, 60), cv2.FONT_HERSHEY_TRIPLEX,0.7, (0, 0, 0), 2)\n",
+        "    cv2.putText(Foto, 'Obras del autor/a ' + remove_punctuation(autor) + ' con tipo ' + remove_punctuation(TO), (100, 60), cv2.FONT_HERSHEY_TRIPLEX,0.7, (0, 0, 0), 2)\n",
         "    fig, ax = plt.subplots(1,1,figsize=(16,16))\n",
         "    ax.axis('off')\n",
         "    ax.xaxis.set_ticklabels([])\n",
@@ -1186,28 +1177,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 192,
           "referenced_widgets": [
-            "b38ab39fda86471fb9e9fc4cc5e99618",
-            "24d6812c9aff47fc82e742fda92bac38",
-            "777af3122e914dfd901be9b22b882a9d",
-            "e0d88bf11f1347daa2acefac7efc62e5",
-            "24c3c959e3924f56a88d44203f3b2707",
-            "4ed5da25752a44d7a814e882b6dd86a8",
-            "3b9b02f8b70549ec9960a5409e1a7683",
-            "28ce35a958224fefa992169f917bf93e",
-            "1815ed3a5d9047c68684c23c12ccce13",
-            "1a3ab29b2fe24310a39c3809339a4303",
-            "909804524277477289aeab1593fa4ffd",
-            "4020c916fdf84c51830d6786538274ac",
-            "4a5b1ad3212f4520af97385c1d6fa471",
-            "2d3bb8f758fc402c87f784bbde3363ea",
-            "117f83bc84134bf296746f984ce0e755",
-            "2cf3d12d5f874a20899f20f989deafe2",
-            "2bdd2226a0fa4864a8a420fb229fa847",
-            "15011f0108c44fa7999a026b6036005e",
-            "8357f36a0b474f88b361a58663c63f8a"
+            "f87c2e0fabc042cda6b55c22da18c4ad",
+            "7a87820ee82d4e16811aa3521efb5cc7",
+            "b7f0bd9b530749e69aeb830541d0c770",
+            "a4ef34ab9700438591cbd5a0ce9b601d",
+            "56c1f2e4474b48bfb44b99ffa21ce2af",
+            "f646a4e98bc445d9a62a98b0233c6790",
+            "9a2c0baa6a484e7daca3d77363cae2fb",
+            "2ceca46be1054fb681a9ceeb8ef1a6c0",
+            "585acc0ac9444dd69c6b306d37762c94",
+            "dce3bf288a6a4b2db5aa5d138c5ac241",
+            "5799d977aa9a472e86c907568dad0c06",
+            "60b00d9675fb45d799c676e83888abb8",
+            "079aadf29c224ba1a938a7aa7dd2cd5d",
+            "6c3a5b979d034976bb382c7c59e4613a",
+            "77af72624ab84892add7ab7108c072bb",
+            "e998df6f7aaf4293918789087f9cb442",
+            "e0c031baa49541818483bed42197af46",
+            "1d61a86d7cc24550884ad52929e40819",
+            "53f58c9f8a0c4a8ea3dab0f53f6fe5f8"
           ]
         },
-        "outputId": "92b6f759-f363-4cca-98ed-10813727a35c"
+        "outputId": "42d78ab0-18f8-4038-b221-4171149ed22d"
       },
       "source": [
         "keyword=widgets.Dropdown(\n",
@@ -1261,13 +1252,13 @@
         "display(output)\n",
         "display(output2)"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b38ab39fda86471fb9e9fc4cc5e99618",
+              "model_id": "f87c2e0fabc042cda6b55c22da18c4ad",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1283,7 +1274,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e0d88bf11f1347daa2acefac7efc62e5",
+              "model_id": "a4ef34ab9700438591cbd5a0ce9b601d",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1299,7 +1290,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "3b9b02f8b70549ec9960a5409e1a7683",
+              "model_id": "9a2c0baa6a484e7daca3d77363cae2fb",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1322,7 +1313,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1a3ab29b2fe24310a39c3809339a4303",
+              "model_id": "dce3bf288a6a4b2db5aa5d138c5ac241",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1338,7 +1329,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4a5b1ad3212f4520af97385c1d6fa471",
+              "model_id": "079aadf29c224ba1a938a7aa7dd2cd5d",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1354,7 +1345,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2cf3d12d5f874a20899f20f989deafe2",
+              "model_id": "e998df6f7aaf4293918789087f9cb442",
               "version_minor": 0,
               "version_major": 2
             },
@@ -1370,7 +1361,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "15011f0108c44fa7999a026b6036005e",
+              "model_id": "1d61a86d7cc24550884ad52929e40819",
               "version_minor": 0,
               "version_major": 2
             },
