--- a/Notebooks/SacarMúsica/Dataset_Gitante2.ipynb
+++ b/Notebooks/SacarMúsica/Dataset_Gitante2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Dataset_Gitante2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMt2mBP3NnJC+qMi3ZDlfWl",
+      "authorship_tag": "ABX9TyNjCWMHXj8lEYgRqvR3eAZp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "17kVJ9AYzEU7",
-        "outputId": "29cd558b-3cb8-483c-f086-97940936fa0f"
+        "outputId": "b1b46134-90b4-4587-bf61-5f3d933a2f12"
       },
       "source": [
         "%cd obb_anns"
@@ -86,40 +86,85 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "aEc71U8GTeNl"
+      },
+      "source": [
+        "!wget https://www.dropbox.com/s/84dy3hxbgi4x2tx/ds2_dense.zip?dl=1 -O ds2_dense.zip\n",
+        "!unzip ds2_dense.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 333
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1ga3oTSdzJJk",
-        "outputId": "db4b7f4b-0bf2-40c9-945c-fa664fe045b8"
+        "outputId": "90c4b0ba-0529-46a2-de2b-b0005ed4128d"
       },
       "source": [
         "from obb_anns import OBBAnns\n",
-        "o = OBBAnns('path/to/file.json')\n",
+        "o = OBBAnns('ds2_dense/deepscores_val.json')\n",
         "o.load_annotations()"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "loading ann_info...\n"
+            "loading ann_info...\n",
+            "done! t=4.30s\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-05d2a061e67b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mobb_anns\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOBBAnns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOBBAnns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'path/to/file.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_annotations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/content/obb_anns/obb_anns/obb_anns.py\u001b[0m in \u001b[0;36mload_annotations\u001b[0;34m(self, annotation_set_filter)\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[0;31m# Set up timer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mann_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mann_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mann_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'path/to/file.json'"
-          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KFkB4baIT_bl",
+        "outputId": "b3315e17-2b74-48a9-810f-be2f31386bbe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "o.visualize(img_idx=1, out_dir='/content/save', show=False, oriented=False)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Visualizing ds2_dense/images/lg-210359136-aug-lilyjazz--page-14.png...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v7knthefYxo8"
+      },
+      "source": [
+        "imgs, anns = o.get_img_ann_pair(idxs=[1])"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ykjPfeJpY5cb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
